@@ -1,3 +1,10 @@
+2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	getter/setter requires the target
+	* gameswf/gameswf_object.cpp
+	* gameswf/gameswf_value.cpp
+	* gameswf/gameswf_value.h
+
 2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* gameswf/gameswf_value.h: a bit cleanup
